--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
+.text{
+  font-family: cursive;
+}
+.text2{
+  font-family: cursive;
+}
+.strong{
+  font-family: cursive;
+}
 :root{
   --primary: #fff;
-  --bg-color: rgb(5, 53, 61);
+  --bg-color: rgb(198, 100, 164);
   --bg-envelope-color: #f5edd1;
   --envelope-tab: #ecdeb8;
   --envelope-cover: #e6cfa7;
   --shadow-color: rgba(0, 0, 0, 0.2);
-  --txt-color: #444;
-  --heart-color: rgb(252, 8, 231);
+  --txt-color:#000000;
+  --heart-color: rgb(223, 16, 164);
 }
 body{
   margin: 0;
